# kafka_streaming_api

./: Makefile  README.md
helm/kafka/: values-local.yaml
k8s/: consumer.yaml  job_kafka.yaml  network-policy.yaml  producer.yaml
src/kafka/: main.py  topics_config.yaml
src/kafka-consumer/: Cargo.toml  Dockerfile  main.rs
src/kafka-consumer/src/: main.rs
src/kafka-init/: Dockerfile  main.py  topics_config.yaml
src/kafka-producer-api/: Cargo.toml  Dockerfile  main.rs
src/kafka-producer-api/src/: main.rs
