[package]
name = "kafka-producer-api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kafka-producer-api"
path = "src"

[dependencies]
rdkafka = { version = "0.37.0", features = ["cmake-build"] }
tokio = { version = "1.45.1", features = ["full"] }
reqwest = { version = "0.12.18", features = ["json"] }
serde_json = "1.0.140"